--- a/package.json
+++ b/package.json
@@ -71,5 +71,10 @@
     "xml2js": "^0.6.2",
     "xss": "^1.0.14",
     "youtube-transcript": "^1.0.6"
+  },
+  "devDependencies": {
+    "@capacitor/android": "^6.2.1",
+    "@capacitor/cli": "^6.2.1",
+    "@capacitor/core": "^6.2.1"
   }
 }
